# waltham-transmitter-plugin

./: LICENSE  README.md
waltham-transmitter-plugin/: README.md  meson.build
waltham-transmitter-plugin/attic/waltham-renderer/: meson.build  pipeline_example_general.cfg  pipeline_example_intel.cfg  pipeline_example_rcar.cfg  waltham-renderer.c
waltham-transmitter-plugin/docs/: 0-waltham-overview.md  1-waltham-client-and-receiver.md  2-waltham-how-to-build.md  waltham-book.yml
waltham-transmitter-plugin/include/: meson.build  plugin.h  transmitter_api.h  waltham-renderer.h
waltham-transmitter-plugin/transmitter-plugin/: input.c  meson.build  output.c  plugin.c  weston.ini.transmitter
